--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,4 +6,4 @@
     android:layout_margin="32dp"
     android:layout_height="match_parent"
     tools:context=".activity.SplashActivity"
-    tools:src="@mipmap/ic_launcher" />
+    android:background="@drawable/download" />
