--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,86 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="@color/colorPrimary"
+    android:weightSum="1">
+
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:src="@mipmap/ic_launcher"
-        android:layout_margin="16dp"/>
+        android:layout_marginTop="50dp"
+        android:paddingBottom="50dp"
+        android:background="@drawable/download"
+        android:layout_width="wrap_content"
+        android:layout_height="92dp"
+        android:layout_marginBottom="24dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.28" />
 
-    <EditText
-        android:id="@+id/username"
-        android:hint="Name"
-        android:layout_width="250dp"
+    <android.support.design.widget.TextInputLayout
+        android:layout_marginTop="35dp"
+        android:id="@+id/email"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"
-        android:ems="10"
+        app:errorEnabled="true"
+        android:textColorHint="#FFFFFF"
+        android:backgroundTint="@color/md_white_1000"
+        app:passwordToggleTint="@color/md_white_1000"
         >
 
-        <requestFocus />
-    </EditText>
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="email"
+            android:textColorHint="#FFFFFF"
+            android:shadowColor="@color/md_white_1000"
+            android:textColor="@color/md_white_1000"
+            android:backgroundTint="@color/md_white_1000"/>
+    </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/age"
-        android:hint="Age"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:inputType="number"
-        android:ems="10" >
-
-        <requestFocus />
-    </EditText>
-
-    <EditText
-        android:id="@+id/childPhone"
-        android:hint="Phone Number"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:inputType="number"
-        android:ems="10" >
-
-        <requestFocus />
-    </EditText>
-
-    <EditText
-        android:id="@+id/parentPhone"
-        android:hint="Parent's Phone Number"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:inputType="number"
-        android:ems="10" >
-
-        <requestFocus />
-    </EditText>
-
-    <EditText
+    <android.support.design.widget.TextInputLayout
         android:id="@+id/password"
-        android:layout_width="250dp"
-        android:hint="Password"
-        android:layout_gravity="center"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword" />
+        android:layout_marginTop="4dp"
+        app:errorEnabled="true"
+        android:textColorHint="#FFFFFF"
+        android:backgroundTint="@color/md_white_1000"
+        app:passwordToggleTint="@color/md_white_1000">
 
-    <Button
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="password"
+            android:inputType="textPassword"
+            android:shadowColor="@color/md_white_1000"
+            android:textColor="@color/md_white_1000"
+            android:backgroundTint="@color/md_white_1000"/>
+    </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/Loginbutton"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:layout_width="240dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
+        android:layout_gravity="center"
+        android:padding="12dp"
+        android:text="Login"
+        android:background="@drawable/rounded"
+        android:textColor="@color/colorPrimary"/>
 
-    <!--<Button-->
-        <!--android:id="@+id/SignUpButton"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:layout_width="240dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="SignUp" />-->
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/sign_up"
+        android:layout_width="250dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:padding="12dp"
+        android:text="Sign Up"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/rounded"/>
+
 
 </LinearLayout>
