--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,5 +5,4 @@
     android:layout_width="match_parent"
     android:layout_margin="32dp"
     android:layout_height="match_parent"
-    tools:context=".activity.SplashActivity"
-    android:background="@drawable/download" />
+    tools:context=".activity.SplashActivity"/>
