--- a/app/src/main/res/layout/question_single_choice.xml
+++ b/app/src/main/res/layout/question_single_choice.xml
@@ -15,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="4dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <TextView
                 android:id="@+id/questionTitle"
